--- a/public/forgot-password.html
+++ b/public/forgot-password.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Login Page</title>
+    <title>Forgot Password Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="assets/css/main.css" rel="stylesheet">
@@ -13,31 +13,28 @@
 
 <body class="text-center">
     <form class="form-signin">
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        <h1 class="h3 mb-3 font-weight-normal">Forgot Password</h1>
         <label for="email" class="sr-only">Email address</label>
         <input type="email" id="email" class="form-control" placeholder="Email address" required autofocus>
-        <label for="password" class="sr-only">Password</label>
-        <input type="password" id="password" class="form-control" placeholder="Password" required>
-        <a class="btn btn-lg btn-primary btn-block" onClick="signIn()">Sign in</a>
-        <a href="/signup.html">Don't have an account? Sign up here.</a>
-        <a href="/forgot-password.html">Forgot password? Reset it here.</a>
+        <a class="btn btn-lg btn-primary btn-block" onClick="forgotPassword()">Send</a>
+        <a href="/index.html">Don't need to reset password? Login here.</a>
     </form>
     <script>
-        function signIn() {
+        function forgotPassword() {
             var data = {
-                email: document.forms[0].elements[0].value,
-                password: document.forms[0].elements[1].value
+                email: document.forms[0].elements[0].value
             };
             $.ajax({
                 type: 'POST',
-                url: '/login',
+                url: '/forgot-password',
                 data,
                 success: function (data) {
-                    window.location.replace('/game.html');
+                    window.alert(data.message);
+                    window.location.replace('/index.html');
                 },
                 error: function (xhr) {
                     window.alert(JSON.stringify(xhr));
-                    window.location.replace('/index.html');
+                    window.location.replace('/forgot-password.html');
                 }
             });
         }
